--- a/cyndi.html
+++ b/cyndi.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="z7N5kEzJbvjixH51gQKcnBu684YwnH85sV1BUyt4LrvFRKRPvwJ5NS1oo/CBTKVEo3SaQ3MZ8xtA0MaSGJrHH0NkN+XvqZf5YNRzEg5PYD6cLqrKOXYAD0p0l0zHONPx">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OqJKhtt0SwZ17nn+Mk9rR9HzvbZByPfFM0cstk8BlCKA4pV17DEgOjWw4E22Es2+AaTfMC/ZpndcVmgwaIszSMnj2ObBg3+N4cEBefOHtiuJGHT23ZOVLGBFRMeX9V8L">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
